--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,7 +1,30 @@
-.App-header {
-  margin: 30px 0;
+body {
+  background: #053c5e;
+  padding: 20px;
 }
-.footer {
-  text-align: center;
-  margin: 30px 0;
+.Dictionary h1 {
+  font-size: 18px;
+  opacity: 0.7;
+}
+.Dictionary section {
+  background: #bfdbf7;
+  padding: 30px;
+  border-radius: 6px;
+  box-shadow: 0px 10px 10px rgba(0 0 0 /10%);
+  margin: 20px 0;
+}
+
+.Dictionary input {
+  width: 100%;
+  padding: 12px;
+  background: #bfdbf7;
+  border-radius: 6px;
+}
+.Dictionary .hint {
+  font-size: 11px;
+  margin-top: 5px;
+  color: #053c5e;
+}
+footer {
+  color: #b3fffc;
 }
