--- a/src/Phonetic.css
+++ b/src/Phonetic.css
@@ -1,7 +1,5 @@
 .Phonetic {
   margin: 20px 0;
-}
-.Phonetic a {
   border-radius: 20px;
   text-decoration: none;
   font-size: 14px;
@@ -9,7 +7,6 @@
   font-weight: bolder;
   opacity: 0.5;
 }
-
-.Phonetic a:hover {
-  color: #053c5e;
+.Phonetic span {
+  padding-left: 5px;
 }
